Fix a wrong size in menu

--- a/webroot/scss/partials/_menu.scss
+++ b/webroot/scss/partials/_menu.scss
@@ -181,7 +181,7 @@ nav {
 }
 .right-nav a {
 	display:block;
-	padding:10px 17px;
+	padding:10px 15px;
 	line-height:1.2em;
 	color:#fff;
 	cursor: pointer;
@@ -237,7 +237,7 @@ nav {
 }
 
 .right-nav ul > li:hover ul li{
-	height: 35px;
+	height: 38px;
 }
 
 .right-nav .navbar-user{
